--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name":"@shedali/gherkin-html",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "bin":{
+  	"gherkout": "src/index.js"
+  },
   "dependencies": {
     "@shedali/mdgen": "^0.4.6",
     "cat": "^0.2.0",
